--- a/.github/workflows/ajut-dev.yml
+++ b/.github/workflows/ajut-dev.yml
@@ -20,4 +20,4 @@ jobs:
         username: ${{ secrets.DEPLOY_SSH_USERNAME }}
         password: ${{ secrets.DEPLOY_SSH_PASSWORD }}
         port: ${{ secrets.DEPLOY_SSH_PORT }}
-        script: whoami && ls -lah && pwd
+        script: ansible-playbook -i 'localhost,' -c local provision/ansible/playbooks/deploy.yml --extra-vars="name='ajut-dev'"
