--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,7 +3,7 @@
 # they will be requested for review when someone 
 # opens a pull request.
 
-*       @catileptic @vtemian @costibleotu @aniri @RaduCStefanescu
+*       @johnsmithm @alexkingdom
 
 # More details on creating a codeowners file:
 # https://help.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
