Update and rename tests.yml to ajut-dev-test.yml

--- a/.github/workflows/ajut-dev-test.yml
+++ b/.github/workflows/ajut-dev-test.yml
@@ -1,9 +1,8 @@
-name: CI
+name: ajut-dev-test
 
 on:
   pull_request:
-    branches:
-      - master
+    types: [opened,reopened]
 
 jobs:
   tests:
