--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-Django==3.0.4
+gevent==21.1.2
+Django==3.1.5
 django-environ==0.4.5
 django-material>=1.6.3,<2.0.0
 django-material-admin>=1.6.44,<2.0.0
-psycopg2-binary==2.8.4
-django-crispy-bulma>=0.2,<1.0
-django-crispy-forms>=1.9.0,<2.0.0
-Pillow==7.0.0
-django-spurl==0.6.6
-django-admin-autocomplete-filter==0.4
+psycopg2-binary==2.8.6
+git+https://github.com/python-discord/django-crispy-bulma
+django-crispy-forms~=1.9.0
+Pillow==8.1.0
+django-spurl==0.6.7
+django-admin-autocomplete-filter==0.6.1
 boto3>=1.12.24,<2.0.0
 django-storages>=1.9.1,<2.0.0
 django-recaptcha>=2.0.6,<3.0.0
 pycrypto>=2.6.1,<3.0.0
-pyOpenSSL>=19.1.0,<20.0.0
+pyOpenSSL>=19.1.0,<21.0.0
 django-file-resubmit>=0.5.2,<1.0.0
-django-extensions==2.2.8
-requests==2.23.0
+django-extensions==3.1.0
+requests==2.25.1
 django-admin-rangefilter>=0.5.4,<1.0.0
 admin-totals>=1.0.1,<2.0.0
 gunicorn==20.0.4
-gevent==1.4.0
-whitenoise==5.0.1
-sentry-sdk==0.14.3
+whitenoise==5.2.0
+sentry-sdk==0.19.5
