--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,10 @@ POSTGRES_DB=ro-help
 
 DATABASE_URL=postgres://postgres:postgres@db/ro-help
 
+# Register for reCaptcha v3 https://www.google.com/recaptcha/admin
 RECAPTCHA_PUBLIC_KEY=
 RECAPTCHA_PRIVATE_KEY=
 
 ENABLE_DEBUG_TOOLBAR=True
+
+# EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
